@@ -1,3 +1,10 @@
+2004-11-11  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* configure.ac, src/libmissing/inet_ntop.c, src/libmissing/inet_ntop.h,
+	  src/libmissing/missing.h, src/munge/unmunge.c, src/munged/conf.c:
+	  Added support for platforms lacking inet_ntop().
+	  Replaced inet_ntoa() with inet_ntop().
+
 2004-11-10  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* README: Updated.
